--- a/newpage/src/pages/searchdoctor/searchdoctor.css
+++ b/newpage/src/pages/searchdoctor/searchdoctor.css
@@ -1,7 +1,10 @@
 .customCol1SearchPage{
     padding: 0 !important;
 }
-
+.custCol1{
+    padding: 0 !important;
+    margin: 0 !important;
+}
 .row1{
     background: #e7e7e7;
 }
@@ -120,6 +123,7 @@
     color: white !important;
     padding: 1% !important;
     display: flex;
+    z-index: 2;
 }
 .ratingContainer1{
     background: #000098 !important;
@@ -194,7 +198,7 @@
 .cardDetailed{
     border: 2px solid #cecece;
     margin: 20px;
-    padding: 20px;;
+    padding: 20px;
 }
 .detailedImg{
     float: left;
@@ -313,9 +317,7 @@
 .detailedImgText41{
     margin-right: 15px;
 }
-.detailedImgText42{
 
-}
 /* =============================================================================== */
 
 @media (max-width:1000px){
@@ -426,4 +428,111 @@
     .sortbyPart{
         margin-left: 25%;
     }
+}
+
+
+/*============top left===============*/
+.cont1 {
+    background-color: darkblue;
+    color: white;
+    padding: 6px;
+  }
+  .cont2 {
+    background-color: darkblue;
+    color: red;
+    padding: 6px;
+    border-top: 1px solid black;
+  }
+  .cont3 {
+    color: darkblue;
+    overflow: scroll;
+    height: 400px;
+  }
+  .inp1 {
+    width: 45px;
+    height: 20px;
+  }
+  .cont4 {
+    background-color: red;
+    padding: 17px;
+  }
+  .slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 4px;
+    border-radius: 5px;
+    background: darkblue;
+    outline: none;
+    /*opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;*/
+    margin-bottom: 22px;
+  }
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background: red;
+    border: 5px solid darkblue;
+    cursor: pointer;
+  }
+  .slider::-moz-range-thumb {
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    background: red;
+    border: 9px solid darkblue;
+    cursor: pointer;
+  }
+  .card-input-radio {
+    display: none;
+  }
+  
+  .card-input-radio:checked + .card1 {
+    background-color: red;
+    border: 3px solid green;
+  }
+  .card-input-radio:checked + .card2 {
+    background-color: darkblue;
+    border: 3px solid green;
+  }
+  .card1 {
+    background-color: red;
+    border: 3px solid transparent;
+    border-radius: 50px 0px 0px 50px;
+    display: inline-block;
+    text-align: center;
+    /*margin: 20px;*/
+    color: white;
+    padding: 5px;
+  }
+  .card2 {
+    background-color: darkblue;
+    border: 3px solid transparent;
+    border-radius: 0px 50px 50px 0px;
+    display: inline-block;
+    text-align: center;
+    /*margin: 20px;*/
+    color: white;
+    padding: 5px;
+  }
+  label {
+    font-size: 1.4em;
+  }
+  .docpic121 {
+    width: inherit;
+  }
+  .reset {
+    background-color: #ffffff00;
+    border: none;
+    color: #9cd0ce;
+  }
+
+.row101{
+    width: 100%;
+}
+.row102{
+    width: 100%;
 }
